--- a/style/scholarProfile.css
+++ b/style/scholarProfile.css
@@ -20,6 +20,15 @@ li {
     width: 100%;
 }
 
+.profile-pic img {
+    float: none;
+    margin: 0;
+    object-fit: contain;
+    width: 250px;
+    height: 250px;
+    border-radius: 50% !important;
+}
+
 .profileBar-portlet {
     padding: 10px 0 0 0 !important;
     display: flex;
@@ -52,8 +61,9 @@ li {
 }
 
 .actionBtn {
-    float: right;
-    margin-right: 20px;
+    float: end;
+    justify-content: end;
+    align-items: end;
 }
 
 .portlet {
