responsive na sya pipol

--- a/style/addStaff.css
+++ b/style/addStaff.css
@@ -131,3 +131,18 @@ input[type="submit"] {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
+
+@media screen and (max-width: 779px) {
+
+	.btnSearch {
+    	padding: 10px;
+    	height: 45px;
+    	margin-bottom: 8px;
+    	margin-left: 5px;
+	}
+
+	.searchBar {
+		padding: 5px;   
+		width: 100px;
+	}
+}
