--- a/style/tabbing.css
+++ b/style/tabbing.css
@@ -33,8 +33,8 @@ div {
 .profile-pic img {
     float: none;
     margin: 0;
-    width: 25%;
-    height: 25%;
+    width: 250px;
+    height: 250px;
     border-radius: 50% !important;
 }
 
